fixed pagination overflow when many pages

--- a/mysite/assets/scss/modules/content-grid/_main.scss
+++ b/mysite/assets/scss/modules/content-grid/_main.scss
@@ -79,6 +79,7 @@ $submit-width: 200px;
 				padding-right: 10px;
 				@include desktop-header {
 					float: right;
+					padding-right: 0px;
 				}
 			}
 
